knopf.css
/*! knopf v1.0.9 | MIT License | https://knopf.dev/ */

:root {
  /* ==========================================================================
     Color
     ========================================================================== */

  --knopf-hue: 218;
  --knopf-saturation: 77%;
  --knopf-luminosity: 37%;

  /* White */
  --knopf-white: 0 0% 100%;

  /* ==========================================================================
     Sizes
     ========================================================================== */

  /* Font */
  --knopf-font-size-base: 1rem;
  --knopf-font-size-small: calc(var(--knopf-font-size-base) - 0.25rem);
  --knopf-font-size-large: calc(var(--knopf-font-size-base) + 0.2rem);
  --knopf-font-size-huge: calc(var(--knopf-font-size-base) + 0.5rem);

  /* Padding */
  --knopf-padding-base: 0.375rem;
  --knopf-padding-small: calc(var(--knopf-padding-base) - 0.125rem);
  --knopf-padding-large: calc(var(--knopf-padding-base) + 0.125rem);
  --knopf-padding-huge: calc(var(--knopf-padding-base) + 0.375rem);

  /* Icon */
  --knopf-icon-size-base: 1.125rem;
  --knopf-icon-size-small: calc(var(--knopf-icon-size-base) - 0.25rem);
  --knopf-icon-size-large: calc(var(--knopf-icon-size-base) + 0.375rem);
  --knopf-icon-size-huge: calc(var(--knopf-icon-size-base) + 0.625rem);

  /* ==========================================================================
     Initial
     ========================================================================== */

  /* Size */
  --knopf-font-size: var(--knopf-font-size-base);
  --knopf-padding: var(--knopf-padding-base);
  --knopf-icon-size: var(--knopf-icon-size-base);

  /* Border */
  --knopf-border-radius: 0.33em;
  --knopf-border-style: solid;
  --knopf-border-width: 1px;
  --knopf-border-alpha: 0%;

  /* Text */
  --knopf-font-family: inherit;
  --knopf-font-weight: 500;
  --knopf-line-height: 1.5;
  --knopf-justify-content: center;
  --knopf-text-decoration-line: none;
  --knopf-text-decoration-color: currentColor;
  --knopf-text-transform: none;

  /* Flex */
  --knopf-display: inline-flex;
  --knopf-flex-direction: row;

  /* Group */
  --knopf-group-direction: row;

  /* Misc */
  --knopf-background-image: none;
  --knopf-box-shadow: none;
  --knopf-transition: all 150ms ease-in-out;
}

/* ==========================================================================
   Class
   ========================================================================== */

.knopf.knopf {
  /* Colors */
  --knopf-color: var(--knopf-hue) var(--knopf-saturation) var(--knopf-luminosity);

  /* Light */
  --knopf-color-light: var(--knopf-hue) var(--knopf-saturation) calc(var(--knopf-luminosity) + 10%);
  --knopf-color-lighter: var(--knopf-hue) var(--knopf-saturation) calc(var(--knopf-luminosity) + 15%);

  /* Dark */
  --knopf-color-dark: var(--knopf-hue) var(--knopf-saturation) calc(var(--knopf-luminosity) - 10%);
  --knopf-color-darker: var(--knopf-hue) var(--knopf-saturation) calc(var(--knopf-luminosity) - 15%);

  /* Default */
  --knopf-background-alpha: 100%;
  --knopf-background-color: var(--knopf-color);
  --knopf-border-color: var(--knopf-color);
  --knopf-gradient-from: var(--knopf-color-light);
  --knopf-gradient-to: var(--knopf-color-dark);
  --knopf-text-color: var(--knopf-white);

  /* Hover */
  --knopf-hover-background-alpha: 100%;
  --knopf-hover-background-color: var(--knopf-color-dark);
  --knopf-hover-border-color: var(--knopf-color-dark);
  --knopf-hover-gradient-from: var(--knopf-color-lighter);
  --knopf-hover-gradient-to: var(--knopf-color);
  --knopf-hover-text-color: var(--knopf-white);

  /* Active */
  --knopf-active-background-alpha: 100%;
  --knopf-active-background-color: var(--knopf-color-darker);
  --knopf-active-border-color: var(--knopf-color-darker);
  --knopf-active-gradient-from: var(--knopf-color-dark);
  --knopf-active-gradient-to: var(--knopf-color);
  --knopf-active-text-color: var(--knopf-white);

  /* Spacing */
  --knopf-block-padding: var(--knopf-padding);
  --knopf-inline-padding: calc(var(--knopf-padding) * 2);

  /* Properties */
  all: unset;
  -webkit-user-drag: element;
  align-items: center;
  background-color: var(--knopf-named-background-color, hsl(var(--knopf-background-color) / var(--knopf-background-alpha)));
  background-image: var(--knopf-background-image);
  background-origin: border-box;
  border-color: hsl(var(--knopf-border-color) / var(--knopf-border-alpha));
  border-radius: var(--knopf-border-radius);
  border-style: var(--knopf-border-style);
  border-width: var(--knopf-border-width);
  box-shadow: var(--knopf-box-shadow);
  box-sizing: border-box;
  color: hsl(var(--knopf-text-color));
  -webkit-text-fill-color: hsl(var(--knopf-text-color));
  cursor: pointer;
  display: var(--knopf-display);
  flex-direction: var(--knopf-flex-direction);
  font-family: var(--knopf-font-family);
  font-size: var(--knopf-font-size);
  font-weight: var(--knopf-font-weight);
  line-height: var(--knopf-line-height);
  justify-content: var(--knopf-justify-content);
  padding-block-end: var(--knopf-block-padding);
  padding-block-start: var(--knopf-block-padding);
  padding-inline-end: var(--knopf-inline-padding);
  padding-inline-start: var(--knopf-inline-padding);
  position: relative;
  text-decoration-color: var(--knopf-text-decoration-color);
  text-decoration-line: var(--knopf-text-decoration-line);
  text-transform: var(--knopf-text-transform);
  transition: var(--knopf-transition);
  white-space: nowrap;
}
/* ... */

